tests/neg-custom-args/feature/i13946/BadPrinter.scala
// in BadPrinter.scala
import language.future
class BadPrinter extends Printer: // error
  override def print(s: String): Unit = println("Bad!!!")